fix logo appearing too large on IE

--- a/css/index_en.css
+++ b/css/index_en.css
@@ -52,6 +52,7 @@ section {
 
 .logo img {
   max-width: 300px;
+  max-height: 175px;
 }
 
 .language-bar {
